sort.basic.bubble.AlgBubbleSort2.scala.error
Erreur de compilation :
AlgBubbleSort2:2: error: ')' expected but '(' found.
def bubbleSort2(liste:List([Char])):Liste([Char]) = {
                          ^AlgBubbleSort2:2: error: '=' expected but ')' found.
def bubbleSort2(liste:List([Char])):Liste([Char]) = {
                                  ^AlgBubbleSort2:12: error: illegal start of simple expression
}
^